tests/errors/array_01_cc.f90
program array_01_cc
implicit none

integer :: a(5)
a = []
print *, a

end program
